Version 4.11 - 21 Jan 2011, by Per Øyvind Karlsen

- look for EVR of package at the first element @provides@ rather than the last
- replace incorrect usage of URPM::rpmvercmp on NVRA with rpmEVRcompare in
  URPM::Resolve::provided_version_that_overlaps() &
  URPM::Resolve::_find_required_package__sort()

Version 4.10 - 21 Jan 2011, by Per Øyvind Karlsen

- fix distepoch detection breakage with proper synthesis

Version 4.9 - 21 Jan 2011, by Per Øyvind Karlsen

- make URPM::Package::get_tag() handle NVRA tag for synthesis (fixing
  regression in previous version)

Version 4.8 - 21 Jan 2011, by Per Øyvind Karlsen

- fix a bug causing segfault when trying open a non-existing segfault which
  for some reaallly odd reason didn't get triggered before now
- remove a last couple of remaining leftovers after db conversion
- really include the workaround for removal issue that was accidentally omitted
  in the previous release
- remove all indices for old rpmdb after conversion also when not doing rebuild

Version 4.7 - 19 Jan 2011, by Per Øyvind Karlsen

- work around package removal issue, resulting in "error: Invalid number of
  transaction elements." when using urpme on packages with distepoch.
- add URPM::DB::archive() for transaction log cleaning
- add URPM::DB::convert() for database conversion
- add URPM::DB::info() to return berkeley db type & endianness

Version 4.6 - 11 Jan 2011, by Per Øyvind Karlsen

- revert missing db environment hack, proper fix has been done in rpm now
- drop deprecated URPM::Pkg->header_filename
- make URPM::Pkg->filename properly return the filename in synthesis, rather
  than trying to generate it from NVRA
- add URPM::DB::close()

Version 4.5 -  9 Jan 2011, by Per Øyvind Karlsen

- ensure that a db environment with config & required directories exists for
  chroots before opening the rpmdb

Version 4.4 -  6 Jan 2011, by Per Øyvind Karlsen

- check URPM::Transactin::add() for errors and return them if any (#61746)