@@ -1,5 +1,6 @@
 Version 4.11 - 21 Jan 2011, by Per Øyvind Karlsen
 
+- fix URPM::Resolve::*_overlap() for packages having disttag
 - look for EVR of package at the first element @provides@ rather than the last
 - replace incorrect usage of URPM::rpmvercmp on NVRA with rpmEVRcompare in
   URPM::Resolve::provided_version_that_overlaps() &
